# madivaru-lib

./: CMakeLists.txt  README.md  common_lib.emDepend  common_lib.emLayout  common_lib.emp  platformio.ini  readme.md
Setup/: Flash.ld  startup.S
Src/: main.c  types.h
Src/cli/includes/: cli_api.h  cli_cfg.h
Src/cli/src/: cli_api.c
Src/sensor_framework/api/: sensor_api.c
Src/sensor_framework/includes/: sensor_api.h  sensors.h
Src/serialport/api/: serialport.c
Src/serialport/includes/: serialport.h
Src/spi/api/: spi_api.c
Src/spi/includes/: spi_api.h
Src/utils/includes/: crc32.h  fifo.h  timer.h
Src/utils/src/: crc32.c  timer.c
Src/xtc/api/: xtc_api.c
Src/xtc/includes/: xtc_api.h
c/src/: mdv_cli.c  mdv_driver.c  mdv_driver_essentials.c  mdv_sensor_api.c  mdv_serialport.c  mdv_spi.c  mdv_xtc.c  types.h
c/src/cli/: cli_api.c  cli_api.h
c/src/include/: mdv_average16.h  mdv_cli.h  mdv_crc16.h  mdv_crc32.h  mdv_driver.h  mdv_driver_essentials.h  mdv_fifo.h  mdv_handle.h  mdv_sensor_api.h  mdv_serialport.h  mdv_spi.h  mdv_timer.h  mdv_timer_system.h  mdv_types.h  mdv_xtc.h
c/src/sensor_framework/: sensor_api.c  sensor_api.h
c/src/serialport/: serialport.c  serialport.h
c/src/spi/: spi_api.h
c/src/utils/: average16.c  average16.h  crc16.c  crc16.h  fifo.c  mdv_average16.c  timer.c  (+7 more)
c/test/: main.cc  test_serialport.cc
c/test/timer_system/: CMakeLists.txt  test_timer_system.cpp
c/vs-project/: .gitignore  madivaru-lib-tdd.sln  madivaru-lib-tdd.vcxproj
cc/src/: types.h
cc/test/: main.cc  test_timer.cc
examples/xtc-example/: .gitignore
(+16 files in other folders)
